--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apos-to-lex-form": "^1.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "googleapis": "^120.0.0",
     "mongoose": "^7.3.1",
+    "natural": "^6.5.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "spelling-corrector": "^3.0.0",
+    "stopword": "^2.0.8",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
@@ -23,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon ./bin/www"
   },
   "eslintConfig": {
     "extends": [
