--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@elastic/elasticsearch": "^8.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apos-to-lex-form": "^1.0.5",
+    "axios": "^1.4.0",
+    "config": "^3.3.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "googleapis": "^120.0.0",
+    "log-timestamp": "^0.3.0",
     "mongoose": "^7.3.1",
     "natural": "^6.5.0",
     "nodemon": "^3.0.1",
