--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "testServer": "nodemon backend/server.js"
   },
   "eslintConfig": {
     "extends": [
